--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-1" class="under">Repository-1</a></td>
-                <td><a href="https://reactjs-task-1-8yw8.vercel.app/" class="under">Deployment-1</a></td>
+                <td><a href="https://github.com/gpmanojkumar/RECTJS-t1" class="under">Repository-1</a></td>
+                <td><a href="https://rectjs-t1.vercel.app/" class="under">Deployment-1</a></td>
             </tr>
             <tr>
                 <td>2</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-2" class="under">Repository-2</a></td>
-                <td><a href="https://reactjs-task-2-sigma.vercel.app/" class="under">Deployment-2</a></td>
+                <td><a href="https://github.com/gpmanojkumar/REACTJS-t2" class="under">Repository-2</a></td>
+                <td><a href="https://reactjs-t2.vercel.app/" class="under">Deployment-2</a></td>
             </tr>
             <tr>
                 <td>3</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-3" class="under">Repository-3</a></td>
-                <td><a href="https://reactjs-task-3-sage.vercel.app/" class="under">Deployment-3</a></td>
+                <td><a href="https://github.com/gpmanojkumar/REACTJS-t3" class="under">Repository-3</a></td>
+                <td><a href="https://reactjs-t3.vercel.app/" class="under">Deployment-3</a></td>
             </tr>
             <tr>
                 <td>4</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-4" class="under">Repository-4</a></td>
-                <td><a href="https://reactjs-task-4-nine.vercel.app/" class="under">Deployment-4</a></td>
+                <td><a href="https://github.com/gpmanojkumar/REACTJS-t4" class="under">Repository-4</a></td>
+                <td><a href="https://reactjs-t4.vercel.app/" class="under">Deployment-4</a></td>
             </tr>
             <tr>
                 <td>5</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-5" class="under">Repository-5</a></td>
-                <td><a href="https://reactjs-task-5-tau.vercel.app/" class="under">Deployment-5</a></td>
+                <td><a href="https://github.com/gpmanojkumar/REACTJS-t5" class="under">Repository-5</a></td>
+                <td><a href="https://reactjs-t5.vercel.app/" class="under">Deployment-5</a></td>
             </tr>
             <tr>
                 <td>6</td>
-                <td><a href="https://github.com/PrasanthRajaratnam/reactjs-task-6" class="under">Repository-6</a></td>
-                <td><a href="https://reactjs-task-6-flax.vercel.app/" class="under">Deployment-6</a></td>
+                <td><a href="https://github.com/gpmanojkumar/REACTJS-t6" class="under">Repository-6</a></td>
+                <td><a href="https://reactjs-t6.vercel.app/" class="under">Deployment-6</a></td>
             </tr>
         </table>
     </form>
